fixato flickering

--- a/src/poc/static/vue-assets/dt-editor.css
+++ b/src/poc/static/vue-assets/dt-editor.css
@@ -1,1 +1,1 @@
-.opacity-50[data-v-5159f10a]{opacity:.5}
+.opacity-50[data-v-64f1566f]{opacity:.5}
